<resources>
    <string name="app_name">AyA: Weather Contracts</string>
    <string name="menu">MENU</string>
    <string name="options">OPTIONS</string>
    <string name="tutorial">TUTORIAL</string>
    <string name="best_score">Best Score</string>
    <string name="puntuacion_inicial">0</string>
    <string name="last_score">Last Score</string>
    <string name="night_shift">NIGHT SHIFT</string>
    <string name="day_shift">DAY SHIFT</string>
    <string name="language">Language:</string>
    <string name="vibration">Vibration:</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="music_volume">Music Volume:</string>
    <string name="hired">Congratulations, you\'re hired!</string>
    <string name="rules_general_desc">Place the contract at the center on the right pile by pressing the button which color matches that of the pile</string>
    <string name="rules_hierarchy_one">If the contract has no text, the contract\'s color will be that of its background</string>
    <string name="rules_hierarchy_two">If the contract\'s text matches the text color, the contract\'s color will be defined by this color</string>
    <string name="rules_hierarchy_three">If the contract\'s text matches the background color, the contract\'s color will be defined by this color</string>
    <string name="rules_hierarchy_four">If all attributes represent a different color, the contract\'s color will be that of its background</string>
    <string name="log_in" translatable="false">Log In</string>
    <string name="new_user" translatable="false">New User</string>
    <string name="username" translatable="false">Username</string>
    <string name="password" translatable="false">Password</string>
    <string name="score" translatable="false">SCORE:</string>
    <string name="nulo" translatable="false">null</string>
    <string name="continuar" translatable="false">CONTINUE</string>
    <string name="hundred" translatable="false">100</string>
    <string name="error_login" translatable="false">ERROR</string>
    <string name="new_user_created">NEW USER CREATED</string>
    <string name="enter_an_email_address">ENTER AN EMAIL ADDRESS</string>
    <string name="invalid_email">INVALID EMAIL</string>
    <string name="invalid_password">INVALID PASSWORD</string>
    <string name="login_to_an_account">LOGIN TO AN ACCOUNT</string>
    <string name="cancel">Cancel</string>
    <string name="accept">accept</string>
    <string name="start_again">You will have to start your game again</string>
    <string name="sure_menu">Are you sure you want to go to menu?</string>
    <string name="sure_settings">Are you sure you want to go to settings?</string>
    <string name="go_to_tutorial">Do you want to go to the tutorial?</string>
    <string name="tutorial_recommendation">It is recommended to see the tutorial before playing</string>
</resources>