<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainMenuActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/backgroundgreen" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="600dp"
        android:layout_height="330dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guia_horizontal_60"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.6"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guia_horizontal_30"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.3"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/view_background_niveles"
            android:layout_width="580dp"
            android:layout_height="310dp"
            android:background="@color/dark_brown"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_background_score"
            android:layout_width="180dp"
            android:layout_height="200dp"
            android:background="@color/dark_brown"
            android:elevation="5dp"
            android:outlineProvider="bounds"
            app:layout_constraintBottom_toTopOf="@id/button_tutorial"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_options"
            android:layout_width="85dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/brown"
            android:elevation="5dp"
            android:outlineProvider="bounds"
            android:text="@string/options"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@id/view_background_niveles"
            app:layout_constraintEnd_toStartOf="@id/button_tutorial"
            app:layout_constraintStart_toStartOf="@id/view_background_score"
            app:layout_constraintTop_toBottomOf="@id/view_background_score" />

        <Button
            android:id="@+id/button_tutorial"
            android:layout_width="85dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/brown"
            android:elevation="5dp"
            android:outlineProvider="bounds"
            android:text="@string/tutorial"
            android:textSize="9sp"
            app:layout_constraintBottom_toBottomOf="@id/view_background_niveles"
            app:layout_constraintEnd_toEndOf="@id/view_background_score"
            app:layout_constraintStart_toEndOf="@id/button_options"
            app:layout_constraintTop_toBottomOf="@id/view_background_score" />

        <TextView
            android:id="@+id/text_best_score"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@color/brown"
            android:elevation="6dp"
            android:gravity="center"
            android:text="@string/best_score"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/text_best_score_number"
            app:layout_constraintEnd_toEndOf="@id/view_background_score"
            app:layout_constraintStart_toStartOf="@id/view_background_score"
            app:layout_constraintTop_toTopOf="@id/view_background_score" />

        <TextView
            android:id="@+id/text_best_score_number"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:background="@color/black"
            android:elevation="6dp"
            android:gravity="center"
            android:text="@string/puntuacion_inicial"
            android:textColor="@color/green"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/text_last_score"
            app:layout_constraintEnd_toEndOf="@id/view_background_score"
            app:layout_constraintStart_toStartOf="@id/view_background_score"
            app:layout_constraintTop_toBottomOf="@id/text_best_score" />

        <TextView
            android:id="@+id/text_last_score"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@color/brown"
            android:elevation="6dp"
            android:gravity="center"
            android:text="@string/last_score"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/text_last_score_number"
            app:layout_constraintEnd_toEndOf="@id/view_background_score"
            app:layout_constraintStart_toStartOf="@id/view_background_score"
            app:layout_constraintTop_toBottomOf="@id/text_best_score_number" />

        <TextView
            android:id="@+id/text_last_score_number"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:background="@color/black"
            android:elevation="6dp"
            android:gravity="center"
            android:text="@string/puntuacion_inicial"
            android:textColor="@color/green"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@id/view_background_score"
            app:layout_constraintEnd_toEndOf="@id/view_background_score"
            app:layout_constraintStart_toStartOf="@id/view_background_score"
            app:layout_constraintTop_toBottomOf="@id/text_last_score" />

        <View
            android:id="@+id/view_parte_izq"
            android:layout_width="195dp"
            android:layout_height="match_parent"
            android:elevation="5dp"
            android:outlineProvider="bounds"
            app:layout_constraintBottom_toBottomOf="@id/view_background_niveles"
            app:layout_constraintStart_toStartOf="@id/view_background_niveles"
            app:layout_constraintTop_toTopOf="@id/view_background_niveles" />

        <ImageButton
            android:id="@+id/view_tarjeta_facil"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/tarjeta_nivel_dia"
            app:layout_constraintBottom_toBottomOf="@id/view_parte_izq"
            app:layout_constraintEnd_toEndOf="@id/view_parte_izq"
            app:layout_constraintStart_toStartOf="@id/view_parte_izq"
            app:layout_constraintTop_toTopOf="@id/view_background_niveles" />

        <View
            android:id="@+id/view_tope_parte_izq"
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:background="@color/brown"
            android:elevation="7dp"
            android:outlineProvider="bounds"
            app:layout_constraintBottom_toBottomOf="@id/view_background_niveles"
            app:layout_constraintEnd_toEndOf="@id/view_parte_izq"
            app:layout_constraintStart_toStartOf="@id/view_parte_izq"
            app:layout_constraintTop_toBottomOf="@id/guia_horizontal_60" />

        <TextView
            android:id="@+id/text_day_shift"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:background="@color/neutral_brown"
            android:elevation="7dp"
            android:gravity="center"
            android:outlineProvider="bounds"
            android:text="@string/day_shift"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/guia_horizontal_30"
            app:layout_constraintEnd_toEndOf="@id/view_parte_izq"
            app:layout_constraintStart_toStartOf="@id/view_parte_izq"
            app:layout_constraintTop_toTopOf="@id/view_background_niveles" />

        <View
            android:id="@+id/view_parte_der"
            android:layout_width="195dp"
            android:layout_height="match_parent"
            android:elevation="5dp"
            android:outlineProvider="bounds"
            app:layout_constraintBottom_toBottomOf="@id/view_background_niveles"
            app:layout_constraintEnd_toEndOf="@id/view_background_niveles"
            app:layout_constraintTop_toTopOf="@id/view_background_niveles" />

        <ImageButton
            android:id="@+id/view_tarjeta_dificil"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/tarjeta_nivel_noche"
            app:layout_constraintBottom_toBottomOf="@id/view_parte_der"
            app:layout_constraintEnd_toEndOf="@id/view_parte_der"
            app:layout_constraintStart_toStartOf="@id/view_parte_der"
            app:layout_constraintTop_toTopOf="@id/view_background_niveles" />

        <View
            android:id="@+id/view_tope_parte_der"
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:background="@color/brown"
            android:elevation="7dp"
            android:outlineProvider="bounds"
            app:layout_constraintBottom_toBottomOf="@id/view_background_niveles"
            app:layout_constraintEnd_toEndOf="@id/view_parte_der"
            app:layout_constraintStart_toStartOf="@id/view_parte_der"
            app:layout_constraintTop_toBottomOf="@id/guia_horizontal_60" />

        <TextView
            android:id="@+id/text_night_shift"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:background="@color/neutral_brown"
            android:elevation="7dp"
            android:gravity="center"
            android:outlineProvider="bounds"
            android:text="@string/night_shift"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/guia_horizontal_30"
            app:layout_constraintEnd_toEndOf="@id/view_parte_der"
            app:layout_constraintStart_toStartOf="@id/view_parte_der"
            app:layout_constraintTop_toTopOf="@id/view_background_niveles" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>