<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RulesActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/backgroundgreen"
        android:scaleType="centerCrop"
        />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintGuide_percent="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:id="@+id/guia_horizontal_80"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/six_eighty"
        android:layout_height="@dimen/three_fifty"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guia_horizontal_80"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/blackboard"/>

        <ScrollView
            android:padding="@dimen/twenty_five"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_rules_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="@dimen/twenty"
                    android:layout_width="@dimen/five_thirty"
                    android:layout_height="@dimen/seventy"
                    app:layout_constraintTop_toTopOf="parent"
                    android:gravity="center"
                    android:text="@string/hired"
                    android:textSize="@dimen/text_forty"
                    android:textColor="@color/almost_white"/>

                <TextView
                    android:id="@+id/text_general_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fifteen"
                    app:layout_constraintBottom_toTopOf="@id/image_folder_plus_one"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_rules_title"
                    android:text="@string/rules_general_desc"
                    android:textSize="@dimen/text_thirty"
                    android:textColor="@color/almost_white"
                    android:gravity="center"
                    android:padding="@dimen/ten"/>

                <ImageView
                    android:id="@+id/image_folder_blue_one"
                    android:layout_width="@dimen/eighty"
                    android:layout_height="@dimen/eighty"
                    android:adjustViewBounds="true"
                    android:src="@drawable/folder_blue"
                    app:layout_constraintTop_toBottomOf="@id/text_general_desc"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/image_arrow_one"
                    app:layout_constraintBottom_toTopOf="@id/text_hierarchy_one"
                    android:layout_marginEnd="@dimen/ten"/>

                <ImageView
                    android:id="@+id/image_arrow_one"
                    android:layout_width="@dimen/eighty"
                    android:layout_height="@dimen/eighty"
                    android:src="@drawable/ic_baseline_arrow_forward_24"
                    app:layout_constraintBottom_toTopOf="@id/text_hierarchy_one"
                    app:layout_constraintTop_toBottomOf="@id/text_general_desc"
                    app:layout_constraintEnd_toStartOf="@id/image_folder_plus_one"
                    app:layout_constraintStart_toEndOf="@id/image_folder_blue_one"/>

                <ImageView
                    android:id="@+id/image_folder_plus_one"
                    android:layout_width="@dimen/eighty"
                    android:layout_height="@dimen/eighty"
                    android:adjustViewBounds="true"
                    android:src="@drawable/folder_blue_plus"
                    app:layout_constraintBottom_toTopOf="@id/text_hierarchy_one"
                    app:layout_constraintTop_toBottomOf="@id/text_general_desc"
                    app:layout_constraintStart_toEndOf="@id/image_arrow_one"
                    app:layout_constraintEnd_toEndOf="@id/image_arrow_two"/>

                <ImageView
                    android:id="@+id/image_arrow_two"
                    android:layout_width="@dimen/eighty"
                    android:layout_height="@dimen/eighty"
                    android:src="@drawable/ic_baseline_arrow_forward_24"
                    app:layout_constraintBottom_toTopOf="@id/text_hierarchy_one"
                    app:layout_constraintTop_toBottomOf="@id/text_general_desc"
                    app:layout_constraintEnd_toStartOf="@id/image_cabinet_blue"
                    app:layout_constraintStart_toEndOf="@id/image_folder_plus_one"/>

                <ImageView
                    android:id="@+id/image_cabinet_blue"
                    android:layout_width="@dimen/eighty"
                    android:layout_height="@dimen/eighty"
                    android:adjustViewBounds="true"
                    android:src="@drawable/file_cabinet_blue"
                    app:layout_constraintTop_toBottomOf="@id/text_general_desc"
                    app:layout_constraintBottom_toTopOf="@id/text_hierarchy_one"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/image_arrow_two" />

                <TextView
                    android:id="@+id/text_hierarchy_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/twenty"
                    android:layout_marginEnd="@dimen/twenty"
                    android:text="@string/rules_hierarchy_one"
                    android:textSize="@dimen/text_thirty"
                    app:layout_constraintTop_toBottomOf="@id/image_folder_plus_one"
                    app:layout_constraintBottom_toTopOf="@id/text_hierarchy_two"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@color/light_blue"
                    android:gravity="center"
                    android:padding="@dimen/ten"/>

                <TextView
                    android:id="@+id/text_hierarchy_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/twenty"
                    android:layout_marginEnd="@dimen/twenty"
                    android:text="@string/rules_hierarchy_two"
                    android:textSize="@dimen/text_thirty"
                    app:layout_constraintTop_toBottomOf="@id/text_hierarchy_one"
                    app:layout_constraintBottom_toTopOf="@id/image_arrow_three"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@color/light_red"
                    android:gravity="center"
                    android:padding="@dimen/ten"/>

                <ImageView
                    android:id="@+id/image_folder_blue_g_g"
                    android:layout_width="@dimen/eighty"
                    android:layout_height="@dimen/eighty"
                    android:adjustViewBounds="true"
                    android:src="@drawable/folder_blue_g_g"
                    app:layout_constraintBottom_toTopOf="@id/text_hierarchy_three"
                    app:layout_constraintTop_toBottomOf="@id/text_hierarchy_two"
                    app:layout_constraintStart_toStartOf="@id/image_arrow_one"
                    app:layout_constraintEnd_toStartOf="@id/image_arrow_three"/>

                <ImageView
                    android:id="@+id/image_arrow_three"
                    android:layout_width="@dimen/eighty"
                    android:layout_height="@dimen/eighty"
                    android:src="@drawable/ic_baseline_arrow_forward_24"
                    app:layout_constraintBottom_toTopOf="@id/text_hierarchy_three"
                    app:layout_constraintTop_toBottomOf="@id/text_hierarchy_two"
                    app:layout_constraintEnd_toEndOf="@id/image_folder_plus_one"
                    app:layout_constraintStart_toStartOf="@id/image_folder_plus_one"/>

                <ImageView
                    android:id="@+id/image_cabinet_green"
                    android:layout_width="@dimen/eighty"
                    android:layout_height="@dimen/eighty"
                    android:adjustViewBounds="true"
                    app:layout_constraintBottom_toTopOf="@id/text_hierarchy_three"
                    app:layout_constraintStart_toEndOf="@id/image_arrow_three"
                    app:layout_constraintEnd_toEndOf="@id/image_arrow_two"
                    app:layout_constraintTop_toBottomOf="@id/text_hierarchy_two"
                    android:src="@drawable/file_cabinet_green"/>

                <TextView
                    android:id="@+id/text_hierarchy_three"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/twenty"
                    android:layout_marginEnd="@dimen/twenty"
                    android:text="@string/rules_hierarchy_three"
                    android:textSize="@dimen/text_thirty"
                    app:layout_constraintTop_toBottomOf="@id/image_arrow_three"
                    app:layout_constraintBottom_toTopOf="@id/image_folder_blue_b_g"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@color/light_yellow"
                    android:gravity="center"
                    android:padding="@dimen/ten"/>

                <ImageView
                    android:id="@+id/image_folder_blue_b_g"
                    android:layout_width="@dimen/eighty"
                    android:layout_height="@dimen/eighty"
                    android:adjustViewBounds="true"
                    android:src="@drawable/folder_blue_b_g"
                    app:layout_constraintBottom_toTopOf="@id/text_hierarchy_four"
                    app:layout_constraintTop_toBottomOf="@id/text_hierarchy_three"
                    app:layout_constraintStart_toStartOf="@id/image_arrow_one"
                    app:layout_constraintEnd_toStartOf="@id/image_arrow_four"/>

                <ImageView
                    android:id="@+id/image_arrow_four"
                    android:layout_width="@dimen/eighty"
                    android:layout_height="@dimen/eighty"
                    android:src="@drawable/ic_baseline_arrow_forward_24"
                    app:layout_constraintBottom_toTopOf="@id/text_hierarchy_four"
                    app:layout_constraintTop_toBottomOf="@id/text_hierarchy_three"
                    app:layout_constraintEnd_toEndOf="@id/image_folder_plus_one"
                    app:layout_constraintStart_toStartOf="@id/image_folder_plus_one"/>

                <ImageView
                    android:id="@+id/image_cabinet_blue_three"
                    android:layout_width="@dimen/eighty"
                    android:layout_height="@dimen/eighty"
                    android:adjustViewBounds="true"
                    app:layout_constraintBottom_toTopOf="@id/text_hierarchy_four"
                    app:layout_constraintStart_toStartOf="@id/image_arrow_two"
                    app:layout_constraintEnd_toEndOf="@id/image_arrow_two"
                    app:layout_constraintTop_toBottomOf="@id/text_hierarchy_three"
                    android:src="@drawable/file_cabinet_blue"/>

                <TextView
                    android:id="@+id/text_hierarchy_four"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/twenty"
                    android:layout_marginEnd="@dimen/twenty"
                    android:text="@string/rules_hierarchy_four"
                    android:textSize="@dimen/text_thirty"
                    app:layout_constraintTop_toBottomOf="@id/image_cabinet_green"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@color/light_green"
                    android:gravity="center"
                    android:padding="@dimen/ten"/>

                <ImageView
                    android:id="@+id/image_folder_blue_g_y"
                    android:layout_width="@dimen/eighty"
                    android:layout_height="@dimen/eighty"
                    android:adjustViewBounds="true"
                    android:src="@drawable/folder_blue_g_y"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_hierarchy_four"
                    app:layout_constraintStart_toStartOf="@id/image_arrow_one"
                    app:layout_constraintEnd_toStartOf="@id/image_arrow_four"/>

                <ImageView
                    android:id="@+id/image_arrow_five"
                    android:layout_width="@dimen/eighty"
                    android:layout_height="@dimen/eighty"
                    android:src="@drawable/ic_baseline_arrow_forward_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_hierarchy_four"
                    app:layout_constraintEnd_toEndOf="@id/image_folder_plus_one"
                    app:layout_constraintStart_toStartOf="@id/image_folder_plus_one"/>

                <ImageView
                    android:id="@+id/image_cabinet_blue_four"
                    android:layout_width="@dimen/eighty"
                    android:layout_height="@dimen/eighty"
                    android:adjustViewBounds="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/image_arrow_two"
                    app:layout_constraintEnd_toEndOf="@id/image_arrow_two"
                    app:layout_constraintTop_toBottomOf="@id/text_hierarchy_four"
                    android:src="@drawable/file_cabinet_blue"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/button_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="@dimen/one_twenty"
        android:layout_height="@dimen/one_twenty"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/house_icon"/>

</androidx.constraintlayout.widget.ConstraintLayout>